--- a/index.html
+++ b/index.html
@@ -874,8 +874,8 @@ normal'><span style='font-size:14.0pt;font-family:"Andale Mono";mso-bidi-font-fa
 <p class=MsoNormal align=center style='text-align:center'><b style='mso-bidi-font-weight:
 normal'><span style='font-size:14.0pt;font-family:"Andale Mono";mso-bidi-font-family:
 "Arial Hebrew"'><a
-href="https://docs.google.com/forms/d/1r-njnyVGPoUnRr0nJBvgZY2UERPq-VqMKqicmMcRmsE/edit?usp=sharing">Click
-Here to Access the Registration Form</a><o:p></o:p></span></b></p>
+href="https://challonge.com/tournaments/bracket_generator?ref=wMraKUS21A">Click
+Here to Access the Live Bracket</a><o:p></o:p></span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'><b style='mso-bidi-font-weight:
 normal'><span style='font-size:14.0pt;font-family:"Andale Mono";mso-bidi-font-family:
