Tried adding the bracket directly embedded

--- a/index.html
+++ b/index.html
@@ -888,6 +888,8 @@ normal'><span style='font-size:14.0pt;font-family:"Andale Mono";mso-bidi-font-fa
 "Arial Hebrew"'>Click Here to See the Live Bracket</span></b></a><b
 style='mso-bidi-font-weight:normal'><span style='font-size:14.0pt;font-family:
 "Andale Mono";mso-bidi-font-family:"Arial Hebrew"'><o:p></o:p></span></b></p>
+	
+<iframe src="https://challonge.com/LaTechIntegrationBEE2022/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
 
 <p class=MsoNormal align=center style='text-align:center'><b style='mso-bidi-font-weight:
 normal'><span style='font-size:14.0pt;font-family:"Andale Mono";mso-bidi-font-family:
