--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@ p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{mso-style-unhide:no;
 	mso-style-qformat:yes;
 	mso-style-parent:"";
+	color:#333366;
 	margin:0in;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
